# snapflow

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_FIX_COMPLETE.md  CI_CD_IMPROVEMENTS.md  CI_FIX_SUMMARY.md  CI_MONITORING_GUIDE.md  COMPARISON.md  COMPLETION_REPORT.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  PSYCOPG2_WINDOWS_FIX.md  PUSH_TO_GITHUB.md  PYTEST_FIX_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_STATUS.md  README.md  RELEASE.md  SUCCESS.md  TEST_FIXES_SUMMARY.md  push_to_github.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  verify_snapflow.py
.github/: CI_CD_GUIDE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  markdown-link-check-config.json  pr-checks.yml  release.yml  stale.yml
demo/: demo_setup.py  demo_workflow.md
examples/: basic_usage.py
scripts/: verify_installation.py
snapflow/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  models.py  operations.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_operations.py
